Added documentation to the oauth endpoint and to the listStudent one
also removed and edited some stuff that was necessary
