# config/cors.php
@@ -1,6 +1,6 @@
 <?php
 return [
-    'paths' => ['api/*', 'sanctum/csrf-cookie'],
+    'paths' => ['api/*', 'sanctum/csrf-cookie', 'oauth/token'],
     'allowed_methods' => ['GET, POST, PUT, DELETE, OPTIONS'],
     'allowed_origins' => ['*'], // Change '*' to specific domains for security
     'allowed_origins_patterns' => [],
